# pifan

./: .gitignore  CMakeLists.txt  PKGBUILD  PKGCONFIG  README.md  appveyor.yml  setup.py
.circleci/: config.yml
_build-arch_linux/: PKGBUILD  pifan.install
daemon/: CMakeLists.txt  DataAccess.cpp  DataAccess.cxx  DataAccess.h  Fan.cxx  Fan.h  Main.cxx  PiFanConfig.h.in
daemon/data_access/: CMakeLists.txt  DataAccess.cxx  DataAccess.h
daemon/hardware/: CMakeLists.txt  Fan.cxx  Fan.h
daemon/util/: pifan.conf  pifan.json  pifand.service
fan_cli/: CMakeLists.txt  pifancli.c
fan_daemon/: CMakeLists.txt  data_access.c  data_access.h  hardware.c  hardware.h  pifan.conf  pifanconfig.h.in  pifand.c
fan_daemon/CMakeModules/: Findpigpio.cmake
fan_daemon/data_access/: CMakeLists.txt  data_access.c  data_access.h
fan_daemon/util/: pifan.conf
fan_gui/: CMakeLists.txt  pifan_window.cpp
fan_gui/ui_files/: main_window.glade
include/: CMakeLists.txt
include/PiFan/: CMakeLists.txt  PiFan.h
pifan-cli/: CMakeLists.txt  Main.cxx
pifan-cli/Configure/: CMakeLists.txt  Configure.cpp
pifan-connector/: CMakeLists.txt  Connector.cpp
pifan-connector/include/: Connector.h  pifan-connector.pc.in
pifan-daemon/: CMakeLists.txt  Main.cxx
pifan-daemon/data_access/: DataAccess.cxx  DataAccess.h
pifan-daemon/hardware/: CMakeLists.txt  Fan.cxx
pifan-daemon/util/: pifand.service
pifand/: CMakeLists.txt  fan.cxx  fan.hh  pifand.cxx
snap/: snapcraft.yaml
src/: CMakeLists.txt
src/fan_cli/: CMakeLists.txt  pifancli.c
src/fan_daemon/: CMakeLists.txt  hardware.c  hardware.h  pifand.c
src/fan_daemon/data_access/: CMakeLists.txt  data_access.c
src/fan_gui/: CMakeLists.txt  main.cpp  pifan_window.hpp
src/pifan-cli/: CMakeLists.txt  Main.cxx
src/pifan-cli-py/: CMakeLists.txt  pifan.py
src/pifan-cli/Configure/: CMakeLists.txt  Configure.h
src/pifan-connector/: CMakeLists.txt  Connector.cpp
src/pifan-daemon/: CMakeLists.txt  Main.cxx  PiFanConfig.hpp.in  main.cpp
src/pifan-daemon/data_access/: CMakeLists.txt
src/pifan-daemon/hardware/: CMakeLists.txt  Fan.cpp  Fan.h  Fan.hpp  Gpio.cpp  Gpio.hpp  Pin.cpp  Pin.hpp
src/pifan-daemon/util/: pifan.json  pifand.service.in
